JON --Avance Front Empleados/detalle, departamento y algo de incidancias
